src/objects/sked_Admin_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sked_Enable_Object_Sync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Object Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Enable_Recurring_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Recurring Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Global_JobURL__c</fullName>
        <label>Global Job URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Nexmo_API_Key__c</fullName>
        <label>Nexmo API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Nexmo_API_secret__c</fullName>
        <label>Nexmo API secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Nexmo_From_Number__c</fullName>
        <label>Nexmo From Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Auto_Approve_Availability__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RAC Auto Approve Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Calendar_End__c</fullName>
        <defaultValue>1900</defaultValue>
        <label>RAC Calendar End</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Calendar_Start__c</fullName>
        <defaultValue>700</defaultValue>
        <label>RAC Calendar Start</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Calendar_Step__c</fullName>
        <defaultValue>30</defaultValue>
        <label>RAC Calendar Step</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Date_Format__c</fullName>
        <defaultValue>&apos;MM/dd/yyyy&apos;</defaultValue>
        <label>RAC Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Datepicker_Format__c</fullName>
        <defaultValue>&apos;D, mm/dd/yy&apos;</defaultValue>
        <label>RAC Datepicker Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Enable_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RAC Enable Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Enable_Availability_Template__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RAC Enable Availability Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_RAC_First_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RAC First Day</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_RAC_No_of_Recur_Weeks__c</fullName>
        <defaultValue>52</defaultValue>
        <label>RAC No of Recur Weeks</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_RAC_Respect_Resource_Timezone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RAC Respect Resource Timezone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_RAC_View_Period__c</fullName>
        <defaultValue>2</defaultValue>
        <label>RAC View Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_RM_Allow_To_Complete_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RM Allow To Complete Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_RM_LocationOrSiteFilter__c</fullName>
        <label>RM Location or Site Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Send_Enroute_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Enroute SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Skedulo_API_Token__c</fullName>
        <label>Skedulo API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Skedulo Admin Setting</label>
</CustomObject>